--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ div.jobs h3::before {
 
 .styled-table th,
 .styled-table td {
-    padding: 2px 15px;
+    padding: 2px 7px;
     font-size: 0.9em;
     font-weight: 300;
 }
@@ -174,6 +174,11 @@ strong em {
 
 .notice-red {
     background-color: #f48f8f58;
+    box-shadow: 0 1px 1px #d3d2d2;
+}
+
+.notice-green {
+    background-color: #79c77658;
     box-shadow: 0 1px 1px #d3d2d2;
 }
 
